deploy/k8s/marketing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketing
spec:
  selector:
    app: marketing
  ports:
    - name: web
      port: 4321
      targetPort: web
